--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,15 @@
             <version>7.10.2</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Jackson Databind - JSON -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.2</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
